--- a/public/index.html
+++ b/public/index.html
@@ -223,22 +223,25 @@ body.webview #tarjetaCard { max-height: 90vh; padding-bottom: 25px; }
 
 /* Estructura Interna */
 .card-content-wrap {
-  position: relative; z-index: 2; padding: 34px 28px;
+  position: relative; z-index: 2; padding: 36px 28px;
   display: flex; flex-direction: column; min-height: 100%; box-sizing: border-box;
 }
 
 /* Tipografía */
-.card-header { text-align: center; margin-bottom: 30px; }
+.card-header { text-align: center; margin-bottom: 28px; }
 .card-title { 
   font-family: var(--serif-font); font-style: italic; font-weight: 800; 
   font-size: clamp(26px, 7vw, 36px); line-height: 1.05; 
-  margin-bottom: 12px; letter-spacing: -0.5px; 
+  margin-bottom: 10px; letter-spacing: -0.5px; 
 }
 .card-author { 
   font-family: var(--sans-font); font-size: 11px; 
   text-transform: uppercase; letter-spacing: 2.5px; 
   opacity: 0.7; font-weight: 800; 
 }
+/* Divisor sutil para elegancia editorial */
+.card-divider { width: 40px; height: 1px; background: currentColor; opacity: 0.15; margin: 18px auto 0; }
+
 .card-body { 
   font-family: var(--serif-font); font-size: 19px; 
   line-height: 1.6; opacity: 0.95; margin-bottom: 32px; 
@@ -259,24 +262,24 @@ body.webview #tarjetaCard { max-height: 90vh; padding-bottom: 25px; }
   border-radius: 14px;
   display: flex; align-items: center; justify-content: center; gap: 12px;
   text-decoration: none; cursor: pointer;
-  transition: transform 0.1s, opacity 0.2s;
+  transition: transform 0.1s, box-shadow 0.2s, background-color 0.2s;
   box-sizing: border-box;
 }
 .btn-action:active { transform: scale(0.97); }
 
-/* 1. Botón Buscalibre (Fondo Oscuro + Brillo Animado) */
+/* 1. Botón Buscalibre (Deep Space Black + Brillo Animado) */
 .btn-buscalibre {
-  background: #0f172a; /* Slate 900 - Oscuro elegante para logo blanco */
+  background: #0a0b14; /* Negro profundo con tinte azul noche muy sutil */
   color: white;
   border: none;
-  box-shadow: 0 8px 20px -4px rgba(15, 23, 42, 0.4);
+  box-shadow: 0 8px 25px -6px rgba(10, 11, 20, 0.5);
   overflow: hidden;
 }
 
 /* Animación de Brillo "Shine" */
 .btn-buscalibre::after {
   content: ""; position: absolute; top: 0; left: -150%; width: 100%; height: 100%;
-  background: linear-gradient(90deg, transparent, rgba(255,255,255,0.18), transparent);
+  background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
   transform: skewX(-20deg);
   animation: shiny 4s infinite; pointer-events: none;
 }
@@ -288,14 +291,17 @@ body.webview #tarjetaCard { max-height: 90vh; padding-bottom: 25px; }
 
 /* 2. Botón Explorar (Gemelo en tamaño, estilo secundario) */
 .btn-explore {
-  background: rgba(125,125,125,0.08); /* Gris muy sutil */
+  background: rgba(125,125,125,0.06);
   border: 1px solid rgba(0,0,0,0.08);
   color: inherit; /* Hereda color de tinta (negro o blanco) */
 }
+.btn-explore:active { background: rgba(125,125,125,0.12); } /* Feedback táctil */
+
 .card-dark-mode .btn-explore {
-  background: rgba(255,255,255,0.1);
+  background: rgba(255,255,255,0.08);
   border: 1px solid rgba(255,255,255,0.15);
 }
+.card-dark-mode .btn-explore:active { background: rgba(255,255,255,0.15); }
 
 .btn-txt { 
   font-family: 'Archivo', sans-serif; font-weight: 700; font-size: 16px; 
@@ -307,7 +313,7 @@ body.webview #tarjetaCard { max-height: 90vh; padding-bottom: 25px; }
   margin-top: 22px; display: flex; justify-content: center; opacity: 0.5;
   transition: opacity 0.3s;
 }
-.triggui-logo-footer img { height: 22px; width: auto; display: block; } /* Aumentado de 14px a 22px */
+.triggui-logo-footer img { height: 22px; width: auto; display: block; }
 
 /* Badge */
 #progressBadge {
@@ -704,6 +710,7 @@ btnShare.onclick = () => {
       <div class="card-header">
         <div class="card-title">${libro.titulo}</div>
         <div class="card-author">${libro.autor}</div>
+        <div class="card-divider"></div>
       </div>
       
       <div class="card-body">
@@ -715,7 +722,7 @@ btnShare.onclick = () => {
       <div class="card-actions">
         <a href="https://www.buscalibre.com.mx/libros/search/?q=${encodeURIComponent(libro.titulo + ' ' + libro.autor)}" 
            target="_blank" class="btn-action btn-buscalibre">
-           <img src="https://raw.githubusercontent.com/badirnakid/triggui-app/main/public/buscalibre.png" alt="Buscalibre" style="height:24px; width:auto; display:block;">
+           <img src="https://raw.githubusercontent.com/badirnakid/triggui-app/main/public/buscalibre.png" alt="Buscalibre" style="height:20px; width:auto; display:block;">
            <span class="btn-txt">Comprar libro</span>
         </a>
         
