--- a/public/index.html
+++ b/public/index.html
@@ -232,7 +232,7 @@ body.webview #tarjetaCard { max-height: 90vh; padding-bottom: 25px; }
 .card-title { 
   font-family: var(--serif-font); font-style: italic; font-weight: 800; 
   font-size: clamp(26px, 7vw, 36px); line-height: 1.05; 
-  margin-bottom: 10px; letter-spacing: -0.5px; 
+  margin-bottom: 12px; letter-spacing: -0.5px; 
 }
 .card-author { 
   font-family: var(--sans-font); font-size: 11px; 
@@ -267,19 +267,19 @@ body.webview #tarjetaCard { max-height: 90vh; padding-bottom: 25px; }
 }
 .btn-action:active { transform: scale(0.97); }
 
-/* 1. Botón Buscalibre (Deep Space Black + Brillo Animado) */
+/* 1. Botón Buscalibre (Pure Black + Brillo Sutil) */
 .btn-buscalibre {
-  background: #0a0b14; /* Negro profundo con tinte azul noche muy sutil */
+  background: #080808; /* Negro Puro y Elegante */
   color: white;
   border: none;
-  box-shadow: 0 8px 25px -6px rgba(10, 11, 20, 0.5);
+  box-shadow: 0 8px 25px -6px rgba(0,0,0, 0.5);
   overflow: hidden;
 }
 
-/* Animación de Brillo "Shine" */
+/* Animación de Brillo "Shine" (Más sutil) */
 .btn-buscalibre::after {
   content: ""; position: absolute; top: 0; left: -150%; width: 100%; height: 100%;
-  background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
+  background: linear-gradient(90deg, transparent, rgba(255,255,255,0.15), transparent);
   transform: skewX(-20deg);
   animation: shiny 4s infinite; pointer-events: none;
 }
@@ -722,7 +722,7 @@ btnShare.onclick = () => {
       <div class="card-actions">
         <a href="https://www.buscalibre.com.mx/libros/search/?q=${encodeURIComponent(libro.titulo + ' ' + libro.autor)}" 
            target="_blank" class="btn-action btn-buscalibre">
-           <img src="https://raw.githubusercontent.com/badirnakid/triggui-app/main/public/buscalibre.png" alt="Buscalibre" style="height:20px; width:auto; display:block;">
+           <img src="https://raw.githubusercontent.com/badirnakid/triggui-app/main/public/buscalibre.png" alt="Buscalibre" style="height:18px; width:auto; display:block;">
            <span class="btn-txt">Comprar libro</span>
         </a>
         
